# web-server

./: CMakeLists.txt
com.jack.server/: RequestHandler.cpp  RequestHandler.h  ServerMain.cpp  ServerMain.h
com.jack.server/model/: Connection.cpp  Connection.h  Header.h  Reply.cpp  Reply.h  Request.h
com.jack.server/utils/: ConnectionManager.cpp  ConnectionManager.h  RequestParser.cpp  RequestParser.h
